fixed bug that I immediately created, and added a few tests

--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
   <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-  <script src="../$.js"></script>
+  <div id="qunit-fixture">
+    <a id="foo-link" href="#foo">foo</a>
+    <span>span 1</span>
+    <span>span 2</span>
+  </div>
+  <script src="../src/$.js"></script>
   <script src="resources/qunit.js"></script>
   <script src="tests.js"></script>
 </body>
